Make mbtocs not wrap or overflow with fixed height

--- a/css/tocslice.css
+++ b/css/tocslice.css
@@ -8,6 +8,10 @@
 .mbtocslice .mbtoc {
     text-align: left;
     display: block;}
+.mbtoc {
+    font-size: 100%; line-height: 100%;
+    height: 1em; white-space: nowrap; overflow: hidden;
+    margin-bottom: 0.2em; margin-right: 1ex;}
 .mbtoc .context .tocpath { padding-left: 1ex; }
 .mbtoc .context { font-size: 60%; float: right; }
 .mbtocslice .mbtoc .context { display: none;}
@@ -15,9 +19,6 @@
 .mbtoc div.elements {
     position: relative; overflow: visible;
     margin: 0px; padding: 0px; border: 0px;}
-.mbtoc {
-    font-size: 100%; line-height: 100%;
-    height: 1em; margin-bottom: 0.2em; margin-right: 1ex;}
 .mbtoc a.brick {
     position: absolute; display: inline-block;
     box-sizing: border-box;
